<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".views.CardFormActivity"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:minWidth="300dp"
    android:orientation="vertical"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp"
        android:layout_marginTop="8dp"
        >

        <EditText
            android:id="@+id/cc_holder_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ep_cc_holder_name"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            >

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                >

                <EditText
                    android:id="@+id/cc_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/ep_cc_number"
                    android:inputType="number"
                    />

                <ImageView
                    android:id="@+id/cc_type_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="4dp"
                    />

            </RelativeLayout>

            <EditText
                android:id="@+id/cc_cvc"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/ep_cc_cvc"
                android:inputType="number"
                android:layout_marginLeft="8dp"
                android:gravity="center_horizontal"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            >

            <EditText
                android:id="@+id/cc_month"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/ep_cc_month"
                android:inputType="number"
                android:focusable="false"
                android:focusableInTouchMode="false"
                />

            <EditText
                android:id="@+id/cc_year"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/ep_cc_year"
                android:inputType="number"
                android:layout_marginLeft="8dp"
                android:focusable="false"
                android:focusableInTouchMode="false"
                />

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btn_done"
        android:text="@string/ep_btn_ok"
        android:background="@color/ep_primary"
        android:textColor="@color/ep_primary_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        />

</LinearLayout>
