<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:minWidth="300dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        android:padding="8dp">

        <EditText
            android:id="@+id/cc_holder_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ep_cc_holder_name"
            android:inputType="text"
            tools:ignore="Autofill" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4">

                <EditText
                    android:id="@+id/cc_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/ep_cc_number"
                    android:inputType="number"
                    tools:ignore="Autofill" />

                <ImageView
                    android:id="@+id/cc_type_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="4dp"
                    tools:ignore="Autofill,ContentDescription"
                     />

            </RelativeLayout>

            <EditText
                android:id="@+id/cc_cvc"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:hint="@string/ep_cc_cvc"
                android:inputType="number"
                tools:ignore="Autofill" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp">

            <EditText
                android:id="@+id/cc_month"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:hint="@string/ep_cc_month"
                android:inputType="number"
                tools:ignore="Autofill" />

            <EditText
                android:id="@+id/cc_year"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:hint="@string/ep_cc_year"
                android:inputType="number"
                tools:ignore="Autofill" />

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btn_done"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@color/ep_primary"
        android:text="@string/ep_btn_ok"
        android:textColor="@color/ep_primary_text" />

</LinearLayout>
